--- a/software.html
+++ b/software.html
@@ -39,8 +39,40 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://intellipro.applytojob.com/apply/7v1DShLMAa/Software-EngineerFull-Stack-Developer'>Software Engineer/Full Stack Developer - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/senior-software-engineer-12306'>Senior Software Engineer - Akamai Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qAv9VfwT&k=Job&j=o1Wsbfwk&__jvst=Employee+Referral&__jvsd=sn5cpgwO&__jvsc=Twitter&bid=nDf3nMwz'>Hobsons Careers - Sr. Software Engineer (Naviance)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPDaVfwh&k=Job&j=oEIobfwF&__jvst=Employee+Referral&__jvsd=sXftHhw8&__jvsc=Twitter&bid=nD83nMws'> Silicon Labs Careers - Embedded Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/glidewelldental/job/orUpbfwF'>Glidewell Dental Careers - Software Engineer II</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/impinj/job/ojeobfwQ'>Impinj Careers - Senior Software Engineer, ItemEncode</a></h5> 
+<p><span class="badge badge-light">Seattle, Washington</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.kanepartners.net/frontend-software-engineer/job/11763642'>Frontend Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDT9Vfwk&k=Job&j=oG4i9fwV&__jvst=Employee&__jvsd=sYcghiwu&__jvsc=Twitter&bid=nQp2nMwV'>Farfetch Careers - Senior Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPW9Vfwz&k=Job&j=on2Y9fwg&__jvst=Employee&__jvsd=sa5Jzgwi&__jvsc=Twitter&bid=nWq2nMw2'>Splunk Careers - Software Engineer - Backend, C++</a></h5> 
+<p><span class="badge badge-light">San Francisco, California</span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='http://intellipro.applytojob.com/apply/7v1DShLMAa/Software-EngineerFull-Stack-Developer'>Software Engineer/Full Stack Developer - IntelliPro Group Inc. - Career Page</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA  San Francisco</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q76aVfw2&k=Job&j=o6Fo9fw2&__jvst=Employee+Referral&__jvsd=sk08BgwO&__jvsc=Twitter&bid=nl91nMw9'>Progress Careers - Senior Software Engineer - .NET</a></h5> 
@@ -67,7 +99,7 @@
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698433249-sr-server-software-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Server Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698433249-sr-server-software-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Server Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -103,7 +135,7 @@
 <p><span class="badge badge-light">Carlsbad, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://searchmetrics.recruitee.com/o/senior-software-engineer-mfx-focus-frontend'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://searchmetrics.recruitee.com/o/senior-software-engineer-mfx-focus-frontend'>
       Senior Software Engineer (m/f/x) - Focus Frontend - Searchmetrics GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -149,7 +181,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/percona/974c7ee6-33db-4760-9d75-3f897e4a4ce2'>Percona - C/C++ Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/percona/974c7ee6-33db-4760-9d75-3f897e4a4ce2'>Percona - C/C++ Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -209,7 +241,7 @@
 <p><span class="badge badge-light">Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sugarcrm/job/ojfibfwL'>SugarCRM Careers - Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/sugarcrm/job/ojfibfwL'>SugarCRM Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -245,11 +277,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409772-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409772-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409708-entry-level-software-engineer'>LaunchCode Entry Level Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409708-entry-level-software-engineer'>LaunchCode Entry Level Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -289,11 +321,11 @@
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oDArbfwz&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=niRlnMw8'>NICE Careers - Senior Java Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oDArbfwz&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=niRlnMw8'>NICE Careers - Senior Java Software Engineer</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698396869-fresher-java-software-engineer'>KMS Technology FRESHER JAVA SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698396869-fresher-java-software-engineer'>KMS Technology FRESHER JAVA SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -337,7 +369,7 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211098088/Lead-Software-Engineer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Lead Software Engineer | CV-Library.co.uk | 211098088</a></h5> 
+<h5><a href='https://www.cv-library.co.uk/job/211098088/Lead-Software-Engineer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Lead Software Engineer | CV-Library.co.uk | 211098088</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -399,7 +431,7 @@
 <p><span class="badge badge-light">S?o Paulo S?o Paulo</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://hire.withgoogle.com/public/jobs/xenditco/view/P_AAAAAAEAAE9JRbnQBFZ3kW'>Senior Software Engineer - Invoice Team job in  Jakarta, Indonesia at Xendit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hire.withgoogle.com/public/jobs/xenditco/view/P_AAAAAAEAAE9JRbnQBFZ3kW'>Senior Software Engineer - Invoice Team job in  Jakarta, Indonesia at Xendit</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -410,38 +442,6 @@
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=owmK8fwu&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nyPZmMwZ'>Gigamon Careers - Senior Staff Software Engineer - User Interface</a></h5> 
 <p><span class="badge badge-light">Seattle, WASeattle, Washington</span></p>
 <p>Posted on:: 2019-10-29</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698358828-senior-software-engineer-ferries-m-f-d-'>Omio Senior Software Engineer - Ferries (m / f / d) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999698356943-software-engineer-006253-'>Playtech Software Engineer [006253] | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Kyiv, Ukraine</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698356784-senior-software-engineer-backend-coverage-connection-excellence-team-m-f-d-'>Omio Senior Software Engineer - Backend/ Coverage/ Connection Excellence Team (m / f / d) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXJ9Vfwu&k=Job&j=oFd28fwM&__jvst=Employee&__jvsd=sdf6Wiwh&__jvsc=Twitter&bid=n5UYmMwA'>Forescout Technologies Inc. Careers - Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=o6S7afwZ&__jvst=Employee+Referral&__jvsd=sfhI7fw5&__jvsc=Twitter&bid=nVRYmMwn'>Cirrus Logic Careers - Spring Intern - Software Engineering</a></h5> 
-<p><span class="badge badge-light">Austin, Texas</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=sgklXhwE&__jvsc=Twitter&bid=n0LYmMwm'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=oVifafwm&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nNMYmMwa'>Align Technology Careers - Senior 3D C++ Software Engineer</a></h5> 
-<p><span class="badge badge-light">Raleigh , North Carolina</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/twitch/jobs/4491130002'>Job Application for Software Engineer at Twitch</a></h5> 
-<p><span class="badge badge-light">Salt Lake City, UT</span></p>
-<p>Posted on: 2019-10-29</p>
 <hr/>
 
 
